# evan-toolbox

./: .gitignore  .project  CMakeLists.txt  LICENSE  README.md  README.txt
EW/: changelog.txt  (+2 more)
VPN/Evan/: CMakeLists.txt  Evan.cbp  Evan.cpp  Evan.depend  Evan.pro  Evan.rc  Evan.workspace  README.txt  README_MACOS.txt  Resources.qrc  Rinstructions.txt  RogerSwDev.txt  SubversionInfo.txt  SubversionTemplate.txt  Untitled.ltb  build.bat  buildDebug.bat  buildRelease.bat  cleanDebug.bat  cleanRelease.bat  log.txt  package-osx  qt-shell.bat
VPN/Evan/DataTypes/: CentroidSizes.h  DataTypeFactory.cpp  DataTypeFactory.h  DataTypePtr.cpp  DataTypePtr.h  DataTypes.xml  Float.cpp  Float.h  FloatVector.h  IDataType.h  IPrintable.h  IRenderable.cpp  IRenderable.h  LMKSetRenderable.cpp  LMKSetRenderable.h  Labels.cpp  Labels.h  LandmarkSet.cpp  LandmarkSet.h  Loadings.h  MatrixD.cpp  MatrixD.h  PCScore.h  Printables.cpp  Printables.h  ProcrustesDistances.h  RList.cpp  RList.h  Renderables.h  SpecimenGroup.cpp  SpecimenGroup.h  Specimens.h  Surface.cpp  Surface.h  SurfaceVector.h  TransformMatrix.h  Variables.h  VectorD.h  Volume.cpp  Volume.h  (+3 more)
VPN/Evan/EW/: CMakeCache.txt  CMakeLists.txt  Makefile  VERSION  changelog.txt  cmake_install.cmake  notes_linux.txt  notes_macosx.txt  notes_windows.txt  readme.txt  version.txt
VPN/Evan/EW/doc/: Doxyfile  Makefile  examples.doxygen  fix_doxygen_man.sh  html_foot.html  mainpage.doxygen  semilmks.doxygen
VPN/Evan/EW/examples/: mandible_case.form  mandible_template.form  simple_landmarks.form
VPN/Evan/EW/src/: AutoArray.h  Bbox3.cpp  BigNum.h  Curve3.cpp  DataflowArray3E.cpp  DataflowCurve3.cpp  DataflowImage3.cpp  DataflowNode.cpp  DataflowNotifier.cpp  DataflowSpline3.cpp  DataflowSurface3.cpp  DataflowSurface3E.cpp  Debug.cpp  DebugHelper.cpp  Dig3Space.cpp  Dig3View.cpp  ErrorIO.cpp  ErrorRuntime.cpp  File.cpp  File.h  Geom3.cpp  Geom3.h  Index3ToIndex.h  Surface3.cpp  Time.cpp  Tps3.cpp  Transform3.cpp  View3Curve.cpp  View3Image.cpp  View3Item.cpp  View3Landmarks.cpp  View3Widget.cpp  XmlReader.cpp  XmlWriter.cpp  XmlWriter.h
VPN/Evan/EW/tests/: FilterForm3.cpp  Test.cpp  Test.h  TestDataflow.h  TestGeom3.cpp  TestGeom3.h  TestString.cpp  TestTransform2.cpp  TestTransform2.h  TestTransform3.h  filter_form3.cpp  makedepends  makefile  readme.txt  test_dig3.h  test_dig3.pro  test_form3.cpp  test_form3_01.form  test_form3_02.form  test_form3_03.form  test_form3_04.form  test_form3_07.form  test_form3_08.form  test_geom3.cpp  test_index3.cpp  test_lmks3.cpp  test_lmks3.h  test_lmks3.pro  test_string.cpp  test_surface3.cpp  test_surface3.h  test_tps2.cpp  test_tps2.vtk  test_tps3.vtk  test_transform2.cpp  test_transform3.cpp  testlowercase.cpp
VPN/Evan/Examples/: -GPA-stl-load-bug.vpn  Concatinate.vpn  GPA.vpn  GenerateSurface.vpn  GroupMeans.vpn  PCPlotWarp.vpn  PCWarp.vpn  PLS.vpn  ReflectedRelabelling.vpn  Regression.vpn  ReversePlotterWarp.vpn  SimpleWarp.vpn  Spit_femur.txt  Spit_tibia.txt  SurfaceWarp.vpn  Templand.vpn  TemplandFilmstripManual.doc  WithinGroupPC.vpn  debug.vpn  exampledata.raw.txt  macac.fascicularis.ply  macac.fascicularis.txt  one.tetrahedron.sur  pairs.txt  tetra.ltb  tetra_0.frm  tetra_1.frm  tetrahedron.morphologika.txt  tetrahedron.raw.txt  tetrahedron.sur  three.tetrahedrons.raw.txt
VPN/Evan/Examples/Templand/: -Eric_PCA.vpn  -miniTemplandExport.vpn  439_lms_Adult.txt  AdultChild.ltb  HumanAdult.frm  HumanChild.frm  WarpAdult_Child_aligned.txt  miniTemplandExport2.vpn  surfaceAndLandmarks.vpn
VPN/Evan/GMM/: CMakeLists.txt
VPN/Evan/GMM/inc/: eig.h  gmm.h  gpa.h  mmr.h  pls.h  version.h
VPN/Evan/GMM/include/: Matrix.h  eig.h  import.h  mmr.h  pca.h  pco.h  pls.h  svd.h  tpp.h  tps.h
VPN/Evan/GMM/src/: GMM.cbp  gpa.cpp  import.cpp  mmr.cpp  pca.cpp  pco.cpp  pls.cpp  svd.cpp  tpp.cpp  tps.cpp
VPN/Evan/Labels/: ILabelValue.h  ScalarLabelValue.h  StringLabelValue.h
VPN/Evan/MainWindow/: About.xml  DropArea.cpp  DropArea.h  MainWindow.cpp  MainWindow.h  NodeGraphicsItem.cpp  NodeGraphicsItem.h  VPNLayout.cpp  VPNLayout.h
VPN/Evan/MainWindow/Designer/: MainWindow.ui  Refresh.bat  license.ui  regInstruct.ui  register.ui  ui_MainWindow.h  ui_license.h  ui_regInstruct.h  ui_register.h
VPN/Evan/Manuals/: EVAN Toolbox Reference Manual.doc
VPN/Evan/Nodes/: CMakeLists.txt  INode.cpp  INode.h  INode.hpp  NodeButton.h  NodeFactory.cpp  NodeFactory.h  NodeLink.cpp  NodeLink.h  NodePort.h  Nodes.xml  NodesR.xml
VPN/Evan/Nodes/AnnotationNode/: AnnotationNode.cpp  AnnotationNode.h
VPN/Evan/Nodes/ConcatNode/: ConcatNode.cpp  ConcatNode.h
VPN/Evan/Nodes/ExportNode/: ExportNode.cpp  ExportNode.h
VPN/Evan/Nodes/GPANode/: GPANode.cpp  GPANode.h
VPN/Evan/Nodes/GenerateSurfaceNode/: GenerateSurfaceNode.cpp  GenerateSurfaceNode.h
VPN/Evan/Nodes/GroupNode/: GroupNode.cpp  GroupNode.h  GroupTreeWidget.cpp  GroupTreeWidget.h  PlotSymbolCombo.h
VPN/Evan/Nodes/ImportNode/: ImportFilters.h  ImportNode.cpp  ImportNode.h
VPN/Evan/Nodes/MMRNode/: MMRNode.cpp  MMRNode.h
VPN/Evan/Nodes/MultiplyNode/: MultiplyNode.cpp  MultiplyNode.h
VPN/Evan/Scheduler/: Scheduler.cpp  Scheduler.h
VPN/Evan/Shaders/: grid.frag  grid.vert  volume_frag.frag  volume_iso_frag.frag  volume_lit_frag.frag  volume_mip_frag.frag  volume_tf_frag.frag  volume_tf_iso_frag.frag  volume_tf_mip_frag.frag  volume_vert.vert  warp.frag  warp.vert
VPN/Evan/Support/: Evan support 2010.docx
VPN/Evan/Utilities/: ExpressionParser.cpp  ExpressionParser.h  GeodeFinder.h  LibraryImport.h  LicenseKeyUtils.h  Logger.cpp  Logger.h  MyRayTracedTechnique.cpp  MyRayTracedTechnique.h  MyReaderWriterDICOM.cpp  QOSGWidget.cpp  QOSGWidget.h  Settings.h  Singleton.h  Writer.cpp  Writer.h  XMLParser.cpp  XMLParser.h  asa063.cpp  mexcel.cpp  mexcel.h  rply.c  sha1.cpp
VPN/Evan/gitRevNumbers/: showRevNumber.sh
VPN/Evan/license/: evantoolbox_public_license.txt
VPN/LicenseGenerator/: .gitignore  CMakeLists.txt  Generator.cpp  Generator.h  LicenseGenerator-linux.pro  LicenseGenerator.pro  LicenseKeyUtils.h  README.txt  generator.ui  main.cpp  ui_generator.h
(+647 files in other folders)
