CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
PROJECT(ET)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
INCLUDE(ETInstallDirs)

#OPTION(BUILD_EXAMPLES "Build Examples" ON)
OPTION(BUILD_DOCS "Create ET Documentation" OFF)

# Set a default build type if none was specified
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
    # Set the possible values of build type for cmake-gui
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release"
      "MinSizeRel" "RelWithDebInfo")
endif()

ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/VPN/Evan")
ADD_SUBDIRECTORY("${CMAKE_CURRENT_SOURCE_DIR}/VPN/LicenseGenerator")
INCLUDE(${CMAKE_MODULE_PATH}/Version.cmake)
#IF(${BUILD_EXAMPLES})
#    ADD_SUBDIRECTORY(examples)
#ENDIF()


#Packaging information
IF(WIN32)
	SET(CPACK_GENERATOR NSIS)
	SET(CPACK_NSIS_CREATE_ICONS_EXTRA
    "CreateShortCut '$SMPROGRAMS\\\\$STARTMENU_FOLDER\\\\ET.lnk' '$INSTDIR\\\\bin\\\\ET.exe'")
	SET(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/VPN/Evan/Images\\\\Evan.ico")
	SET(CPACK_NSIS_MUI_UNIICON "${CMAKE_SOURCE_DIR}/VPN/Evan/Images\\\\Evan.ico")
	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/VPN/Evan/license/evantoolbox_public_license.txt")
ENDIF(WIN32)
SET(CPACK_PACKAGE_NAME "Evan Toolbox")
SET(CPACK_PACKAGE_VERSION "1.72")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "72")
SET(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/VPN/Evan/Images\\\\Evan.ico")

INCLUDE(CPack)
