CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(LibXml2 REQUIRED)

FILE(GLOB EW_sources "src/*.cpp")
FILE(GLOB EW_headers "src/*.h")

INCLUDE_DIRECTORIES("${LIBXML2_INCLUDE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/include")

ADD_LIBRARY(ew ${EW_sources})
TARGET_LINK_LIBRARIES(ew ${LIBXML2_LIBRARIES})

INSTALL(FILES ${EW_headers} DESTINATION ${ET_INSTALL_INC_DIR}/ew
    COMPONENT headers)

##Install the edgewarp library itself
INSTALL(TARGETS ew ARCHIVE DESTINATION ${ET_INSTALL_LIB_DIR} COMPONENT edgewarpLib)


