CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB GMM_sources "src/*.cpp")
FILE(GLOB GMM_headers "include/*.h")

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("../EW/include")

ADD_LIBRARY(GMM ${GMM_sources})

INSTALL(FILES ${GMM_headers} DESTINATION ${ET_INSTALL_INC_DIR}/GMM
    COMPONENT headers)

##Install the GMM library itself
INSTALL(TARGETS GMM ARCHIVE DESTINATION ${ET_INSTALL_LIB_DIR})
